load("//tools/base/bazel:kotlin.bzl", "kotlin_test")

kotlin_test(
    name = "integration-test",
    srcs = glob([
        "java/**/*.kt",
        "java/**/*.java",
    ]),
    data = [
        "//tools/base/sdklib:commandlinetools",
    ],
    jvm_flags = ["-Dtest.suite.jar=integration-test.jar"],
    test_class = "com.android.testutils.JarTestSuite",
    deps = [
        "//tools/base/annotations",
        "//tools/base/testutils:tools.testutils",
        "@maven//:com.google.truth.truth",
        "@maven//:junit.junit",
    ],
)
