load("//tools/base/build-system/integration-test:integration-test.bzl", "gradle_integration_test")
load("//tools/base/bazel:maven.bzl", "maven_repo")

gradle_integration_test(
    name = "tests",
    timeout = "long",
    srcs = glob([
        "src/test/java/**/*.java",
        "src/test/java/**/*.kt",
    ]),
    data = [
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platforms/latest_build_only",
        "//tools/base/build-system:gradle-distrib",
        "//tools/base/build-system/integration-test:test-projects/databindingIncremental",
    ],
    maven_repo_manifests = [
        "//tools/base/build-system:gradle_plugin_repo",
        "//tools/base/build-system/integration-test/databinding/incremental:prebuilts",
        "//tools/base/build-system/integration-test:support_library_latest",
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    ],
    maven_repos = [
        "//tools/data-binding:data_binding_runtime",
    ],
    shard_count = 2,
    deps = [
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/gradle-api",
        "//tools/base/build-system/gradle-core",
        "//tools/base/build-system/integration-test/framework",
        "//tools/base/common:tools.common",
        "//tools/base/ddmlib:tools.ddmlib",
        "//tools/base/repository:tools.repository",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testutils:tools.testutils",
        "//tools/base/third_party:com.google.guava_guava",
        "//tools/base/third_party:com.google.truth.extensions_truth-java8-extension",
        "//tools/base/third_party:com.google.truth_truth",
        "//tools/base/third_party:commons-io_commons-io",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-test",
    ],
)

maven_repo(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2/repository/android/arch/core/common/1.0.0:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/common/1.0.3:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/runtime/1.0.3:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation/1.0.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-common/2.0.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-common/2.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-runtime/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-runtime/2.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/asynclayoutinflater/asynclayoutinflater/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/collection/collection/1.0.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/collection/collection/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout-solver/1.1.3:jar",
        "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout/1.1.3:aar",
        "//prebuilts/tools/common/m2/repository/androidx/coordinatorlayout/coordinatorlayout/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/cursoradapter/cursoradapter/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/customview/customview/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/documentfile/documentfile/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/drawerlayout/drawerlayout/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/interpolator/interpolator/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-ui/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/legacy/legacy-support-core-utils/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.0.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.2.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-extensions/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-process/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime-ktx/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-service/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel-ktx/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel-savedstate/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/loader/loader/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/localbroadcastmanager/localbroadcastmanager/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/print/print/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/savedstate/savedstate/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/slidingpanelayout/slidingpanelayout/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/swiperefreshlayout/swiperefreshlayout/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable-animated/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/viewpager/viewpager/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/26.1.0:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-android/1.4.1:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-core/1.4.1:jar",
    ],
    use_zip = False,
)
