load("//tools/base/build-system/integration-test:integration-test.bzl", "gradle_integration_test")
load("//tools/base/bazel:maven.bzl", "maven_repo")

gradle_integration_test(
    name = "tests",
    timeout = "long",
    srcs = glob([
        "src/test/java/**/*.java",
        "src/test/java/**/*.kt",
    ]),
    data = [
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platforms/latest_build_only",
        "//tools/base/build-system:gradle-distrib",
        "//tools/base/build-system/integration-test:test-projects/databindingIncremental",
    ],
    maven_repo_zips = [
        "//tools/data-binding:data_binding_runtime",
    ],
    maven_repos = [
        "//tools/base/build-system:gradle_plugin_repo",
        "//tools/base/build-system/integration-test/databinding/incremental:prebuilts",
        "//tools/base/build-system/integration-test:support_library_latest",
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    ],
    shard_count = 2,
    deps = [
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/gradle-api",
        "//tools/base/build-system/gradle-core",
        "//tools/base/build-system/integration-test/framework",
        "//tools/base/common:tools.common",
        "//tools/base/ddmlib:tools.ddmlib",
        "//tools/base/repository:tools.repository",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testutils:tools.testutils",
        "@maven//:com.google.guava.guava",
        "@maven//:com.google.truth.extensions.truth-java8-extension",
        "@maven//:com.google.truth.truth",
        "@maven//:commons-io.commons-io",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib",
        "@maven//:org.jetbrains.kotlin.kotlin-test",
    ],
)

maven_repo(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2:android.arch.core.common.1.0.0",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.common.1.0.3",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.runtime.1.0.3_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.annotation.annotation.1.0.0",
        "//prebuilts/tools/common/m2:androidx.annotation.annotation.1.1.0",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-common.2.0.0",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-common.2.1.0",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-runtime.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-runtime.2.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.asynclayoutinflater.asynclayoutinflater.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.collection.collection.1.0.0",
        "//prebuilts/tools/common/m2:androidx.collection.collection.1.1.0",
        "//prebuilts/tools/common/m2:androidx.constraintlayout.constraintlayout.1.1.3_aar",
        "//prebuilts/tools/common/m2:androidx.constraintlayout.constraintlayout-solver.1.1.3",
        "//prebuilts/tools/common/m2:androidx.coordinatorlayout.coordinatorlayout.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.cursoradapter.cursoradapter.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.customview.customview.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.documentfile.documentfile.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.drawerlayout.drawerlayout.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.fragment.fragment.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.fragment.fragment.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.interpolator.interpolator.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.legacy.legacy-support-core-ui.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.legacy.legacy-support-core-utils.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-common.2.0.0",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-common.2.2.0",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-extensions.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-process.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-service.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-savedstate.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.loader.loader.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.localbroadcastmanager.localbroadcastmanager.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.print.print.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.savedstate.savedstate.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.slidingpanelayout.slidingpanelayout.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.swiperefreshlayout.swiperefreshlayout.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable-animated.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.versionedparcelable.versionedparcelable.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.versionedparcelable.versionedparcelable.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.viewpager.viewpager.1.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.26.1.0",
        "//prebuilts/tools/common/m2:com.android.support.support-compat.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-utils.26.1.0_aar",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-android.1.4.1",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-core.1.4.1",
    ],
)
