load("//tools/base/build-system/integration-test:integration-test.bzl", "gradle_integration_test")
load("//tools/base/bazel:maven.bzl", "maven_repository")

gradle_integration_test(
    name = "tests",
    timeout = "long",
    srcs = glob([
        "src/test/java/**/*.java",
        "src/test/java/**/*.kt",
    ]),
    data = [
        "//prebuilts/studio/sdk:build-tools/latest",
        "//tools/base/build-system:gradle-distrib",
        "//tools/base/build-system/integration-test:android_platform_for_tests",
        "//tools/base/build-system/integration-test:test-projects/databindingIncremental",
    ],
    maven_repo_zips = [
        "//tools/data-binding:data_binding_runtime",
    ],
    maven_repos = [
        "//tools/base/build-system:gradle_plugin_repo",
        "//tools/base/build-system/integration-test/databinding/incremental:prebuilts",
        "//tools/base/build-system/integration-test:support_library_latest",
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    ],
    shard_count = 2,
    deps = [
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/gradle-api",
        "//tools/base/build-system/gradle-core",
        "//tools/base/build-system/integration-test/framework",
        "//tools/base/common:tools.common",
        "//tools/base/ddmlib:tools.ddmlib",
        "//tools/base/repository:tools.repository",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testutils:tools.testutils",
        "@maven//:com.google.guava.guava",
        "@maven//:com.google.truth.extensions.truth-java8-extension",
        "@maven//:com.google.truth.truth",
        "@maven//:commons-io.commons-io",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib",
        "@maven//:org.jetbrains.kotlin.kotlin-test",
    ],
)

maven_repository(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:android.arch.lifecycle.runtime_1.0.3",
        "@maven//:androidx.appcompat.appcompat_1.0.0",
        "@maven//:androidx.constraintlayout.constraintlayout_1.1.3",
        "@maven//:androidx.lifecycle.lifecycle-extensions_2.2.0",
        "@maven//:androidx.lifecycle.lifecycle-runtime-ktx_2.2.0",
        "@maven//:androidx.lifecycle.lifecycle-runtime_2.0.0",
        "@maven//:androidx.lifecycle.lifecycle-runtime_2.2.0",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-android_1.4.1",
    ],
)
